<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_element_recycler_bg"
    android:padding="12dp"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:layout_margin="8dp">

    <!-- Button Name -->
    <TextView
        android:id="@+id/buttonName"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/dialog_list_name"
        android:textSize="18sp"
        android:textColor="@android:color/black" />

    <!-- Bin (Delete) Button -->
    <ImageButton
        android:id="@+id/btnDelete"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/delete"
        android:scaleType="centerInside"
        android:src="@drawable/ic_bin"
        app:tint="@android:color/holo_red_dark"
        tools:ignore="TouchTargetSizeCheck" />


    <!-- Gear (Settings) Button -->
    <ImageButton
        android:id="@+id/btnSettings"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/tick"
        android:scaleType="centerInside"
        android:src="@drawable/ic_tick"
        tools:ignore="TouchTargetSizeCheck,UseAppTint"
        app:tint="@android:color/holo_green_dark"/>
</LinearLayout>
