<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_register_bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Login Title -->
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_register"
            android:textSize="34sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:fontFamily="@font/notable"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="200dp" />

        <!-- Email Input -->
        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:hint="@string/hint_email"
            android:background="#8FFFFFFF"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="32dp" />

        <!-- Password Input -->
        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:hint="@string/hint_password"
            android:background="#8FFFFFFF"
            android:inputType="textPassword"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/emailEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="32dp" />

        <!-- Login Button -->
        <Button
            android:id="@+id/registerButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/btn_register"
            android:background="@drawable/rounded_register_btn"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/passwordEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <!-- New User? Register -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/registerButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/old_user_prompt"
                android:textSize="16sp"
                android:textColor="@android:color/white"
                android:shadowColor="#000000"
                android:shadowDx="2.5"
                android:shadowDy="2.5"
                android:shadowRadius="2" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_prompt"
                android:textSize="16sp"
                android:textColor="#409BEB"
                android:textStyle="bold"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:shadowColor="#000000"
                android:shadowDx="2.5"
                android:shadowDy="2.5"
                android:shadowRadius="2" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
