<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_bg"
    android:padding="10dp"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:layout_margin="5dp">

    <!-- Button Name -->
    <TextView
        android:id="@+id/buttonName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/dialog_list_name"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <!-- Bin (Delete) Button -->
    <ImageButton
        android:id="@+id/btnDelete"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/delete"
        android:scaleType="centerInside"
        android:src="@drawable/ic_bin"
        tools:ignore="TouchTargetSizeCheck" />

    <!-- Settings Button with Notification Bubble -->
    <FrameLayout
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:clipChildren="false"
        android:clipToPadding="false">

        <!-- Gear (Settings) Button -->

        <!-- Notification Bubble -->
        <ImageButton
            android:id="@+id/btnSettings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom|start"
            android:layout_marginEnd="20dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/settings"
            android:src="@drawable/ic_edit"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/notifBubble"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:background="@drawable/ic_notif"
            android:text=""
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:layout_margin="1dp"
            android:layout_gravity="top|end"
            android:layout_marginTop="-6dp"
            android:layout_marginEnd="-6dp"
            android:visibility="visible"/>
    </FrameLayout>


</LinearLayout>
